fixtures/logs/build_err_undeclared_cublas.txt
$ cmake --build build -j
[ 25%] Building CXX object CMakeFiles/gemm.dir/src/gemm.cpp.o
/workspace/repo/src/gemm.cpp:31:3: error: use of undeclared identifier 'cublasHandle_t'
   31 |   cublasHandle_t handle;
      |   ^
/workspace/repo/src/gemm.cpp:32:3: error: use of undeclared identifier 'cublasCreate'
   32 |   cublasCreate(&handle);
      |   ^
/workspace/repo/src/gemm.cpp:52:3: error: use of undeclared identifier 'cublasSgemm'
   52 |   cublasSgemm(handle, HIPBLAS_OP_N, HIPBLAS_OP_N, m, n, k,
      |   ^
/workspace/repo/src/gemm.cpp:74:3: error: use of undeclared identifier 'cublasDestroy'
   74 |   cublasDestroy(handle);
      |   ^
4 errors generated when compiling for gfx942.
make[2]: *** [CMakeFiles/gemm.dir/build.make:76: CMakeFiles/gemm.dir/src/gemm.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:110: CMakeFiles/gemm.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
